--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 
         <dependency>
             <groupId>cn.qqhxj.common</groupId>
-            <artifactId>common-rxtx-starter</artifactId>
-            <version>1.0-RELEASES</version>
+            <artifactId>spring-boot-starter-rxtx</artifactId>
+            <version>1.3-RELEASE</version>
         </dependency>
 
         <dependency>
